# knowledge-hub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a1c3f0d21b7e_chunk_level_fts.py  eca98eacb3d9_initial_schema.py
deploy/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: endpoints.ts  types.ts
frontend/src/components/auth/: AuthCard.tsx
frontend/src/components/comments/: CommentsSection.tsx
frontend/src/components/editor/: CollabEditor.tsx  indicators.tsx  wikilinks.ts
frontend/src/components/folder/: FolderView.tsx
frontend/src/components/graph/: GraphCanvas.tsx
frontend/src/components/layout/: Sidebar.tsx  TopBar.tsx  WorkspaceSwitcher.tsx
frontend/src/components/rightbar/: InfoTab.tsx  LinksTab.tsx  RightSidebar.tsx
frontend/src/hooks/: mutations.ts  queries.ts  useDebouncedCallback.ts
frontend/src/lib/: color.ts  tree.ts
frontend/src/pages/: EditorPage.tsx  RootRedirect.tsx  SearchPage.tsx  TagPage.tsx  TokensPage.tsx  WorkspaceHome.tsx  WorkspaceSettingsPage.tsx
src/app/: cli.py  main.py
src/app/api/: deps.py  serializers.py
src/app/mcpserver/: server.py
src/app/orchestration/: index_page.py  seed_demo.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/frontend/src/: index.css
tests/: conftest.py  test_api.py  test_domain.py  test_rbac.py
(+108 files in other folders)
