[project]
name = "knowledge-map"
version = "0.1.0"
description = "Self-hosted collaborative knowledge base with Obsidian-style linking, realtime collaboration, and MCP access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "httpx>=0.28.1",
    "markdown-it-py>=4.2.0",
    "mcp>=1.28.1",
    "mdit-py-plugins>=0.6.1",
    "pgvector>=0.4.2",
    "pwdlib[argon2]>=0.3.0",
    "pycrdt>=0.14.1",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.51",
    "typer>=0.26.8",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
km = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
